# Kyoto

./: .gitignore  CMakeLists.txt  Makefile  README.md  References.md
setup/: setup-arch.sh
src/: compiler.h  kyoto.cpp
src/arch/: alu.cpp  arch.hpp
src/core/: core.hpp  logic.cpp  tryte.cpp
